--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -18,8 +18,8 @@
                         <div class="card-body p-sm-5">
                             <h2 class="text-center mb-4">勉強会申し込みフォーム</h2>
                             <form data-bss-recipient="97a1d961fed486805d572f05e86e94fe">
-                                <div class="mb-3"><input class="form-control" type="text" id="name-2" name="お名前" placeholder="Name" required=""></div>
-                                <div class="mb-3"><input class="form-control" type="email" id="email-2" name="学生用メールアドレス" placeholder="Email" pattern=".*hit-u.ac.jp$" required=""></div>
+                                <div class="mb-3"><input class="form-control" type="text" id="name-2" name="お名前" placeholder="お名前" required=""></div>
+                                <div class="mb-3"><input class="form-control" type="email" id="email-2" name="学生用メールアドレス" placeholder="学生用メールアドレス" pattern=".*hit-u.ac.jp$" required=""></div>
                                 <div class="mb-3"><select class="form-select" required="">
                                         <optgroup label="希望する内容">
                                             <option value="12" selected="">Python</option>
@@ -35,7 +35,7 @@
                                             <option value="">どちらでも大丈夫</option>
                                         </optgroup>
                                     </select></div>
-                                <div class="mb-3"><textarea class="form-control" name="メッセージ（何かあれば）" placeholder="Message"></textarea></div>
+                                <div class="mb-3"><textarea class="form-control" name="メッセージ" placeholder="Message"></textarea></div>
                                 <div><button class="btn btn-primary d-block w-100" type="submit">Send </button></div>
                             </form>
                         </div>
