--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                         </optgroup>
                                     </select></div>
                                 <div class="mb-3"><textarea class="form-control" name="メッセージ" placeholder="Message"></textarea></div>
-                                <div><button class="btn btn-primary d-block w-100" type="submit">Send </button></div>
+                                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Send </button></div>
                             </form>
                         </div>
                     </div>
