--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                                 <form data-bss-recipient="97a1d961fed486805d572f05e86e94fe" data-bss-success-message="正常に送信されました">
                                     <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="お名前" required=""></div>
                                     <div class="mb-3"><input class="form-control" type="email" id="email-2" name="email" placeholder="学生用メールアドレス" required="" pattern=".*hit-u.ac.jp$"></div>
-                                    <div class="mb-3"><select class="form-select" required="">
+                                    <div class="mb-3"><select class="form-select" name="what you want to learn" required="">
                                             <optgroup label="学びたいこと">
                                                 <option value="12" selected="">Python</option>
                                                 <option value="13">Tableau</option>
                                                 <option value="14">それ以外（メッセージにてお知らせください）</option>
                                             </optgroup>
                                         </select></div>
-                                    <div class="mb-3"><select class="form-select" required="">
+                                    <div class="mb-3"><select class="form-select" name="when you want to start learning" required="">
                                             <optgroup label="いつがいいか">
                                                 <option value="12" selected="">夏学期（6月から）</option>
                                                 <option value="13">夏休み（7月中旬以降）</option>
